--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     },
     "dependencies": {
         "@nuxtjs/composition-api": "^0.30.0",
-        "@vueuse/motion": "^2.0.0-beta.4",
         "core-js": "^3.15.1",
-        "nuxt": "^2.15.8",
-        "nuxt-use-motion": "^2.0.0-beta.5"
+        "nuxt": "^2.15.8"
     },
     "devDependencies": {
         "@nuxtjs/tailwindcss": "^4.2.0",
