--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
         "nuxt": "^2.15.8"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.17.0",
+        "@nuxtjs/eslint-config": "^9.0.0",
         "@nuxtjs/tailwindcss": "^4.2.0",
-        "postcss": "^8.3.5"
+        "eslint": "^8.12.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-nuxt": "^3.2.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-vue": "^8.5.0",
+        "postcss": "^8.3.5",
+        "prettier": "^2.6.1"
     }
 }
