phpstorm specific editorconfig adjustments to support empty spaces within brackets when auto formatting.

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,7 @@ trim_trailing_whitespace = true
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
+
+[*.vue]
+ij_html_space_inside_empty_tag = true
+ij_javascript_spaces_within_object_literal_braces = true
